# realtime-resource-tracker-cli

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: app.rs  cli.rs  error.rs  lib.rs  main.rs  metrics.rs  sampler.rs
src/ui/: dashboard.rs  mod.rs  process_picker.rs  theme.rs
tests/: app_tests.rs
