[package]
name = "realtime-resource-tracker-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
sysinfo = "0.33"
anyhow = "1"
ratatui-image = "3.0"
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "line_series"] }
image = "0.25"
